styling: fix section spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -265,13 +265,11 @@ section {
 	}
 
 	@include breakpoint-range($from: tablet) {
-		margin: 0 1rem;
 		padding: 0 1.5rem;
 	}
 
 	@include breakpoint-range($from: desktopSmall) {
 		padding: 0;
-		margin: 0;
 	}
 }
 
